- Properly recognizes advanced seconds classes.
- The console window title now displays useful information.
- Rudimentary Abracadabra support. Set 'noAutoSkill 1' in config.txt,
  then keep using 'ss' command to cast Abracadabra. If it says that you're
  permitted to use Mono Cell, Summon Monster or Class Change, you can then
  activate those skills using 'monocell <#>', 'monster' or 'mvp <#>'.

Bug fixes:
- "vender" command now properly detects the "end" argument. Bugfix by Fenris.
- Attacks will now properly time out when failed.

Credits:
- Fenris: Tk interface improvements.

Internal:
- Added AI.pm, which is a wrapper for @ai_seq and @ai_seq_args.
- Added $char, an alias for $chars[$config{'char'}].


==================
### 1.3.1 (beta)
==================

New features:
- Easier and more flexible avoid.txt format by joseph.
  You should download the new avoid.txt from the latest confpack! The
  old format is not supported anymore.
  See also http://openkore.sourceforge.net/forum/viewtopic.php?t=1633

- Support for idRO: secureLogin_type 3
- Added north/east/south/west/northeast/southeast/southwest/northwest
  commands to manually move the bot in that direction. If you want
  abbreviations for these commands like in a MUD, put this in your config.txt:

  # short movement commands
  alias_n north
  alias_e east
  alias_w west
  alias_s south
  alias_ne northeast
  alias_se southeast
  alias_sw southwest
  alias_nw northwest

  # new names for existing commands
  alias_sc s
  alias_em e

Bug fixes:
- Possibly fixed the "utf8.pm not found" error.
- Fix monster status/ailment detection.
- Fix getAuto.
- Attacking party or followTarget's monster is never considered KS.
- Added some unstucking routines.
  The teleportAuto_noUnstuck configuration option will make bot not 
  teleport when it's stuck.
- Hopefully fix zeny display when dealing for real.
- "respawn" command now works when dead.

Minor tweaks:
- Show (x, y) position after teleporting.